--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,8 @@ updates:
   directory: '/'
   schedule:
     interval: daily
-    time: '20:00'
+    time: '03:00'
+    timezone: 'Asia/Tokyo'
   open-pull-requests-limit: 10
   target-branch: master
   versioning-strategy: lockfile-only
