--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,7 +18,11 @@ AllCops:
     - '**/Rakefile'
     - '**/config.ru'
   NewCops: enable
-  TargetRubyVersion: 3.1
+  TargetRubyVersion: 3.2
+Layout/ArgumentAlignment:
+  EnforcedStyle: with_fixed_indentation
+Layout/ArrayAlignment:
+  EnforcedStyle: with_fixed_indentation
 Layout/EmptyLineAfterGuardClause:
   Enabled: false
 Layout/EndOfLine:
@@ -29,6 +33,8 @@ Layout/FirstArrayElementIndentation:
   EnforcedStyle: consistent
 Layout/FirstHashElementIndentation:
   EnforcedStyle: consistent
+Layout/LineContinuationLeadingSpace:
+  EnforcedStyle: leading
 Layout/LineEndStringConcatenationIndentation:
   EnforcedStyle: indented
 Layout/LineLength:
@@ -91,6 +97,8 @@ Metrics/PerceivedComplexity:
     - '**/contract/*'
   Max: 10
 Minitest/MultipleAssertions:
+  Enabled: false
+Minitest/TestFileName:
   Enabled: false
 Naming/RescuedExceptionsVariableName:
   PreferredName: e
