--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -98,6 +98,8 @@ Metrics/PerceivedComplexity:
   Max: 10
 Minitest/MultipleAssertions:
   Enabled: false
+Minitest/ReturnInTestMethod:
+  Enabled: false
 Minitest/TestFileName:
   Enabled: false
 Naming/RescuedExceptionsVariableName:
